<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">&appName;</string>
    <string name="connect_to_wifi">please connect wifi</string>
    <string name="Try_Another_Trip">please connect wifi</string>
    <string name="Add_Money">Add_Money</string>
    <string name="facebook_app_id">696940887365772</string>
    <string name="fb_login_protocol_scheme">fb696940887365772</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_payment">Payment</string>
    <string name="action_trips">Your trips</string>
    <string name="action_coupon">Coupon</string>
    <string name="action_wallet">Wallet</string>
    <string name="action_help">Help</string>
    <string name="action_share">Share</string>
    <string name="action_logout">Logout</string>
    <string name="past_time">Past Trips</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="get_moving_with_app">Get moving with &appName;</string>
    <string name="or_connect_with_social_media">Or connect with social</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="sample_mail_id">name@examplecom</string>
    <string name="welcome_back">Welcome back, sign in to continue </string>
    <string name="enter_your_password">Enter your password</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>
    <string name="enter_your_details_to_register">Enter your details to register</string>
    <string name="optional">Enter your Email</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password_register">Confirm Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_txt">******</string>
    <string name="recover_password">Enter your mail ID for recovery</string>
    <string name="enter_the_coupon">Enter the coupon code</string>
    <string name="add_coupon">ADD COUPON</string>
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated</string>
    <string name="where_to_go">Where to go?</string>
    <string name="selected_option">Economy</string>
    <string name="selected_payment_mode">Cash</string>
    <string name="change">Change</string>
    <string name="request_xuber">Request Ride</string>
    <string name="schedule">Schedule a ride</string>
    <string name="sample_date">Choose a date</string>
    <string name="sample_time">Choose a time</string>
    <string name="next">Schedule Request</string>
    <string name="different_time">You can\'t schedule in past timings, please choose different time</string>
    <string name="choose_date_time">Please choose date and time for schedule</string>
    <string name="no_service">No Services found</string>
    <string name="no_route">There is no route, choose different destination</string>
    <string name="choose_payment">Choose payment method</string>
    <string name="approximate">Estimated Fare</string>
    <string name="eta_time">ETA</string>
    <string name="sample_rate">$1234</string>
    <string name="include_all">Including all other charges</string>
    <string name="rate_card">Rate Card</string>
    <string name="base_fare">Base Fare</string>
    <string name="fare_km">Fare/km</string>
    <string name="fare_min">Fare/min</string>
    <string name="fare_type">Fare Type</string>
    <string name="capacity">Capacity</string>
    <string name="confirm_your_pickup">Confirm your Pickup</string>
    <string name="confirm">Confirm Pickup</string>
    <string name="sample_address">110, StJoseph Chruch, Richards, road Newyork</string>
    <string name="done">Done</string>
    <string name="looking_for_ride">Finding Comrade</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="share">Share</string>
    <string name="cancel_ride_alert">Are you sure want to cancel the ride?</string>
    <string name="no_providers_found">No one found at the moment to take your ride, Please try after sometime</string>
    <string name="no_drivers_found">No drivers available to take your trip</string>
    <string name="driver_busy">The companion canceled your flight. Searching for another companion</string>
    <string name="Your_order_has_been_canceled_Try_again">Your order has been canceled. Try again
</string>
    <string name="retry">Retry Now</string>
    <string name="try_later">Later</string>
    <string name="sample_name">Comrade</string>
    <string name="sample_service">BMW</string>
    <string name="call_btn">Call</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="surge_pricing">Due to peak hours, charges will be vary based on availability of providers</string>
    <string name="payment">Payment</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_payments">Add Card for payments</string>
    <string name="add">Add Card</string>
    <string name="enter_card_details">Card details not valid</string>
    <string name="are_you_sure">Are you sure want to remove?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrived">Comrade has arrived at your location</string>
    <string name="picked_up">you are on ride</string>
    <string name="finish"> حمد الله على السلامه</string>
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">You have no past trips</string>
    <string name="your_trips">Your Trips</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="invoice">Invoice</string>
    <string name="base_price">Base fare</string>
    <string name="booking_id">Booking ID</string>
    <string name="sample_base_price">$10000</string>
    <string name="extra_price">Extra</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="distance_price">Distance fare</string>
    <string name="rate_provider">Rate your trip with</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="submit">Submit</string>
    <string name="source_location">Your location</string>
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="cencel_request">Are you sure you want to cancel the ride?</string>
    <string name="connect_to_internet">Connect to Internet</string>
    <string name="quit">Quit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet</string>
    <string name="server_down">Unable to reach server</string>
    <string name="please_try_again">Please try again</string>
    <string name="email_validation">Enter your email ID</string>
    <string name="error_phone_number">Error Phone Number</string>
    <string name="not_valid_email">Not a valid email ID</string>
    <string name="password_validation">Password could not be left empty</string>
    <string name="first_name_empty">First name required</string>
    <string name="last_name_empty">Last name required</string>
    <string name="mobile_number_empty">Mobile number required</string>
    <string name="mobile_number_validation">Mobile number must have numbers between 10 to 20 digits</string>
    <string name="True">true</string>
    <string name="False">false</string>
    <string name="not_vaild_coupon">Coupon is not valid or may expired</string>
    <string name="coupon_added">Coupon applied successfully .. will add to the first Trip</string>
    <string name="add_coupon_txt">Add Coupon</string>
    <string name="added_coupon">Coupon\'s applied by you</string>
    <string name="already_in_use_coupon">Coupon already used by you</string>
    <string name="expired_coupon">Sorry, coupon has expired</string>
    <string name="off">OFF</string>
    <string name="the_applied_coupon">The coupon code applied is</string>
    <string name="valid_until">Valid until</string>
    <string name="wallet_balance">Your wallet amount is</string>
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password</string>
    <string name="please_enter_new_pass">Please enter new password</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password</string>
    <string name="different_passwords">Password doesn\'t match</string>
    <string name="request_cancel">You have cancelled the request</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valid_image">No image found</string>
    <string name="otp_validation">Enter OTP field is required</string>
    <string name="inncorrect_otp">Incorrect OTP</string>
    <string name="confirm_password_validation">Password mismatch</string>
    <string name="reset_password">Reset Password</string>
    <string name="note">Note : Please enter the otp send to your registered email address</string>
    <string name="secrete_code">Enter OTP</string>
    <string name="logout_alert">Are you sure want to logout?</string>
    <string name="choose_social">Choose an account</string>
    <string name="facebook_name">Facebook</string>
    <string name="google_name">Google</string>
    <string name="no_comments">No comment available</string>
    <string name="pin_location">Set pin location</string>
    <string name="type">Model</string>
    <string name="emaergeny_call">Are you sure want to proceed with Emergency call?</string>
    <string name="user_no_mobile">No mobile number</string>
    <string name="profile">Profile</string>
    <string name="reason_to_cancel">Reason for cancellation</string>
    <string name="help_msg">Our team person contact\n you soon!</string>
    <string name="schedule_request">Schedule</string>
    <string name="surge_pricing_title">Due to high demand price may vary</string>
    <string name="request_now">Ride now</string>
    <string name="help">Help</string>
    <string name="password_size">Password size must be atleast 6</string>
    <string name="password_not_matched"> Password Not Matched</string>
    <string name="sorry_for_inconvinent">Sorry for inconvenient,Our assisants are busy right now</string>
    <string name="first_name_no_number">First name do not accept numbers</string>
    <string name="last_name_no_number">Last name do not accept numbers</string>
    <string name="use_wallet_amount">Use wallet amount</string>
    <string name="arriving">Comrade accepted your request.</string>
    <string name="view_invoice">View receipt</string>
    <string name="Searching_for_driver">Searching for driver ........</string>
    <string name="empty">(empty)</string>
    <string name="trap_company">الباز شركة نصابة</string>
    <string name="activity_coupon_trap_company">الباز شركة تاكل مال النبي</string>
    <string name="activity_edit_profile_trap_company">شركة الباز نصبت علي المبرمجين اللي نفذو البرنامج ما بالك بالعملاء</string>
</resources>