<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="@dimen/_10sdp"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_white" />

        <com.user.albaz.rafiq.utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/payment"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/trap_company"
            android:textSize="@dimen/_30sdp"
            android:textColor="@color/red"
            android:layout_gravity="left|center_vertical"
            />

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/ic_hacker"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="right|center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <com.user.albaz.rafiq.utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cash_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="@dimen/_9sdp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingEnd="@dimen/_8sdp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/money_icon" />

            <com.user.albaz.rafiq.utils.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/selected_payment_mode"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />
        </LinearLayout>

        <com.user.albaz.rafiq.utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <com.user.albaz.rafiq.utils.MyBoldTextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:visibility="gone"
            />

        <ListView
            android:id="@+id/payment_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <com.user.albaz.rafiq.utils.MyBoldTextView
            android:id="@+id/addCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_payments"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
