<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.user.albaz.rafiq.activities.CouponActivity">

    <LinearLayout
        android:id="@+id/add_money_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.user.albaz.rafiq.utils.MyBoldTextView
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_coupon_txt"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/coupon_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_coupon"
                android:inputType="textCapCharacters"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:textAlignment="viewStart"/>

            <com.user.albaz.rafiq.utils.MyButton
                android:id="@+id/apply_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/full_rounded_button"
                android:text="@string/add_coupon"
                android:textColor="@color/text_color_white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardListViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/activity_coupon_trap_company"
                android:textSize="@dimen/_25sdp"
                android:textColor="@color/red"
                android:layout_gravity="left|center_vertical"
                />


            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_hacker"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="right|center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <com.user.albaz.rafiq.utils.MyBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_coupon"
                android:textColor="@color/black_text_color"
                android:layout_marginBottom="5dp"
                android:textSize="16sp"/>

            <ListView
                android:id="@+id/coupon_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
