<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="35dp"
            android:layout_height="34dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/title_txt"
            android:text="@string/recover_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/txt_color"
            android:textSize="20sp"/>

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:maxLines="1"
                android:gravity="start"
                android:textAlignment="viewStart"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/otp_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:passwordToggleEnabled="false"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/secrete_code"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/new_password"
                android:inputType="textWebPassword"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:passwordToggleEnabled="true"
            tools:ignore="RtlHardcoded">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textAlignment="viewStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/note"
            android:textColor="@color/black_text_color"
            android:visibility="gone" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nextIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="end"

                app:srcCompat="@drawable/next_icon" />
        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_190sdp"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:layout_gravity="bottom"
            >

            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/ic_hacker"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/activity_edit_profile_trap_company"
                android:textSize="@dimen/_25sdp"
                android:textColor="@color/red"
                />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</FrameLayout>